[project]
name = "gym"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EnyMan", email = "Mous.imp@gmail.com"},
]
dependencies = [
    "streamlit>=1.36.*",
    "streamlit-js>=1.0.8",
    "dataclasses-json>=0.6.7",
    "watchdog>=4.0.1",
    "matplotlib>=3.9.1",
    "black>=24.4.2",
    "streamlit-extras>=0.4.3",
    "streamlit-pills>=0.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
